<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:gravity="center_vertical"
    android:background="@drawable/bg_nav">

    <Button
        android:id="@+id/btn_nav_tour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@drawable/ic_nav_tour"
        android:text="@string/nav_tour"
        android:textColor="@color/color_text_selectable"
        android:textSize="@dimen/text_size_nav"
        android:background="@android:color/transparent"
        android:gravity="center" />

    <Button
        android:id="@+id/btn_nav_goods"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@drawable/ic_nav_goods"
        android:text="@string/nav_goods"
        android:textColor="@color/color_text_selectable"
        android:textSize="@dimen/text_size_nav"
        android:background="@android:color/transparent"
        android:gravity="center" />

    <Button
        android:id="@+id/btn_nav_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@drawable/ic_nav_msg"
        android:text="@string/nav_msg"
        android:textColor="@color/color_text_selectable"
        android:textSize="@dimen/text_size_nav"
        android:background="@android:color/transparent"
        android:gravity="center" />

    <Button
        android:id="@+id/btn_nav_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@drawable/ic_nav_share"
        android:text="@string/nav_share"
        android:textColor="@color/color_text_selectable"
        android:textSize="@dimen/text_size_nav"
        android:background="@android:color/transparent"
        android:gravity="center" />

    <Button
        android:id="@+id/btn_nav_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@drawable/ic_nav_user"
        android:text="@string/nav_user"
        android:textColor="@color/color_text_selectable"
        android:textSize="@dimen/text_size_nav"
        android:textAllCaps="false"
        android:background="@android:color/transparent"
        android:gravity="center" />

</LinearLayout>